Fixed Spacing

--- a/frontend/stylesheet.css
+++ b/frontend/stylesheet.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-weight: 300;
@@ -37,6 +36,8 @@ h1 {
   text-align: center;
 }
 
+
+
 form, input, textarea { 
   border-radius: 10px; 
 }
@@ -69,3 +70,12 @@ input#hide:checked ~ span#content {
   display:none;
 }
 
+h1{
+color: limegreen;
+margin-top:30px;
+}
+
+
+  
+  
+  
